Fix icon alignment in Firefox

--- a/app/assets/stylesheets/direct.css
+++ b/app/assets/stylesheets/direct.css
@@ -46,7 +46,6 @@
   display: flex;
   flex-direction: row;
   font-size: 12px;
-  justify-content: space-between;
   align-items: center;
   color: RGB(143, 143, 143);
 }
